# refactor-kit

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  ai-enabling-refactoring.md  pyproject.toml  refactor-driven.md
.github/workflows/: ci.yml  release.yml
.github/workflows/scripts/: check-release-exists.sh  create-github-release.sh  create-release-packages.sh  generate-release-notes.sh  get-next-version.sh  update-version.sh
docs/: index.md  installation.md  quickstart.md
memory/: constitution.md
src/refactor_cli/: __init__.py
templates/: analyze-template.md  plan-template.md  strategy-template.md  tasks-template.md
templates/commands/: analyze.md  constitution.md  execute.md  plan.md  strategy.md  tasks.md  verify.md
tests/: test_cli.py
